Identity controller&service created.

--- a/TokenAuth.API/appsettings.json
+++ b/TokenAuth.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer" : ""
+    "SqlServer": "Data Source=DESKTOP-CLQAE5Q\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
